tests/baselines/reference/invalid-incomplete-groupname-2-u.errors.txt
invalid-incomplete-groupname-2-u.ts(14,4): error TS1501: Named capturing groups are only available when targeting 'ES2018' or later.
invalid-incomplete-groupname-2-u.ts(14,13): error TS1005: '>' expected.
invalid-incomplete-groupname-2-u.ts(14,14): error TS1499: This regular expression flag is only available when targeting 'ES2015' or later.


==== invalid-incomplete-groupname-2-u.ts (3 errors) ====
    // Copyright 2017 the V8 project authors. All rights reserved.
    // This code is governed by the BSD license found in the LICENSE file.
    
    /*---
    description: GroupName is `< RegExpIdentifierName >`.
    esid: prod-GroupName
    negative:
      phase: parse
      type: SyntaxError
    features: [regexp-named-groups]
    ---*/
    
    
    /(?<a>.)\k<a/u;
       ~~~
!!! error TS1501: Named capturing groups are only available when targeting 'ES2018' or later.
                
!!! error TS1005: '>' expected.
                 ~
!!! error TS1499: This regular expression flag is only available when targeting 'ES2015' or later.
    